--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@ Coded by www.creative-tim.com
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>favicon.png" />
-    <title>Vue Argon Dashboard 2 by Creative Tim</title>
+    <title>CreatorKu</title>
 
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
@@ -54,6 +54,10 @@ Coded by www.creative-tim.com
       window.onload = () => {
         FB.Event.subscribe('auth.statusChange', function (response) {
           console.log(response, 'auth.statusChange');
+          if (!response.authResponse) {
+            localStorage.setItem('fbAuthToken', '');
+            localStorage.setItem('fbAccount', null);
+          }
         })
       }
     </script>
