--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,3 @@
-<!--
-=========================================================
-* Vue Argon Dashboard 2 - v3.0.0
-=========================================================
-
-* Product Page: https://creative-tim.com/product/vue-argon-dashboard
-* Copyright 2022 Creative Tim (https://www.creative-tim.com)
-
-Coded by www.creative-tim.com
-
-=========================================================
-
-* The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
--->
 <!DOCTYPE html>
 <html lang="">
   <head>
@@ -35,8 +21,6 @@ Coded by www.creative-tim.com
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-
-    <script async defer src="https://buttons.github.io/buttons.js"></script>
   </head>
   <body class="bg-gray-100">
     <script>
@@ -57,6 +41,7 @@ Coded by www.creative-tim.com
           if (!response.authResponse) {
             localStorage.setItem('fbAuthToken', '');
             localStorage.setItem('fbAccount', null);
+            localStorage.setItem('fbLoggedIn', false);
           }
         })
       }
